--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f0f0f0;
+  display: flex;
   background-image: url("bg.png");
   background-size: cover;
   background-repeat: no-repeat;
